# XPR_Poker

./: CMakeLists.txt  README.md  doxyfile  make_script.sh  xpr_poker.cpp  xpr_proba.cpp
doc/: info_global
inc/: cards.h  common.h  common.hpp  common_poker.h  deck.h  deck.hpp  player.h  player.hpp
src/: CMakeLists.txt  coins_handler.cpp  deck.cpp  game_handler.cpp  main.cpp  player.cpp  xpr_poker.cpp  xpr_proba.cpp
